[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eckity-bert-ga"
version = "0.1.0"
description = "BERT mutation operator for EC-KitY genetic algorithms"
readme = "README.md"
requires-python = ">=3.9"
license = "BSD-3-Clause"
license-files = ["LICENSE"]
authors = [{ name = "EC-KitY" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "eckity~=0.4.1",
    "numpy>=2.0.2",
    "scipy>=1.13.0",
    "torch>=2.7.1",
    "transformers>=4.50.0",
]

[project.optional-dependencies]
dev = [
    "build>=1.2",
    "gymnasium>=1.0",
    "pytest>=8.0",
    "twine>=5.0",
]

[project.urls]
Homepage = "https://github.com/EC-KitY/BERT-Mutation-for-GA"
Repository = "https://github.com/EC-KitY/BERT-Mutation-for-GA"

[tool.setuptools]
packages = ["eckity_bert_ga", "dnm_paper", "dnm_paper.mutation"]

[tool.pytest.ini_options]
testpaths = ["tests"]
